# crawlsy

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  init_data.json  manage.py  pyproject.toml  supervisord.conf  uwsgi.ini
.github/workflows/: docker-image.yml
apps/Alerts/: models.py  serializer.py  urls.py
apps/Alerts/migrations/: 0001_initial.py  0002_alter_alertrulemodel_name_and_more.py  0003_remove_alertrulemodel_target_alertrulemodel_target.py  0004_alter_alertrulemodel_target.py  0005_alter_alertrulemodel_feishuwebhook.py  0006_alter_alertrulemodel_condition_and_more.py
apps/Alerts/views/: alert.py
apps/Ide/: apps.py  urls.py
apps/Ide/views/: ide.py
apps/Monitor/: urls.py
apps/Monitor/views/: monitor.py
apps/Node/: apps.py  models.py  serializer.py  urls.py
apps/Node/migrations/: 0001_initial.py  0002_rename_node_uid_nodemodel_nodeuid_and_more.py
apps/Spider/: apps.py  models.py  serializer.py  urls.py
apps/Task/: models.py  serializer.py  urls.py
apps/User/: models.py  serializer.py  urls.py
crawlsy/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
init_data/: menu_fixture.json  permission_fixture.json  role_fixture.json
spiderManage/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
task_celery/: config.py  main.py
task_celery/node_status/: tasks.py
utils/: alert.py  auth.py  code.py  date.py  exception.py  exception_handler.py  feishu.py  file.py  middleware.py  mongo_pool.py  node_api.py  node_stat.py  pagination.py  response.py  status.py  token.py  unzip.py  verify.py  viewset.py
utils/proto/: manager.proto  manager_pb2.py  manager_pb2.pyi  manager_pb2_grpc.py
(+41 files in other folders)
